# rc7_programming_assistant

./: .dockerignore  .env.example  .env.prod.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
apps/api/: Pipfile  README.md  pyproject.toml
apps/api/src/: README.md  __init__.py  main.py
apps/api/src/api/v1/: __init__.py  router.py
apps/api/src/api/v1/routes/: __init__.py  admin.py  audit.py  auth.py  chat.py  health.py  manuals.py  profile.py  settings.py
apps/api/src/api/v1/schemas/: admin.py  audit.py  auth.py  chat.py  manuals.py  profile.py  settings.py
apps/api/src/core/: config.py  logging.py
apps/api/src/db/: base.py  init.py  session.py
apps/api/src/db/models/: __init__.py  audit.py  chat_history.py  manual.py  manual_chunk.py  manual_chunk_review.py  manual_review_summary.py  role_permission.py  settings.py  user.py
apps/api/src/services/: audit_service.py
apps/api/src/services/auth/: passwords.py  session_tokens.py  users.py
apps/api/src/services/chat/: __init__.py  service.py
apps/api/src/services/manuals/: __init__.py  service.py  storage.py
apps/api/src/services/settings/: service.py
apps/api/tests/: conftest.py  helpers.py  test_admin_user_routes.py  test_audit.py  test_auth_routes.py  test_auth_services.py  test_chat_advisories.py  test_chat_hyde.py  test_chat_json_repair.py  test_chat_lint.py  test_chat_retrieval.py  test_chat_source_legend.py  test_chat_stream.py  test_chat_traceability.py  test_manual_routes.py  test_misc_routes.py  test_profile_routes.py  test_settings_prompt_fix.py  test_settings_retrieval_upgrade.py  test_settings_routes.py
apps/web/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
apps/worker/: README.md  pyproject.toml
apps/worker/scripts/: __init__.py  reembed_chunks.py
apps/worker/src/: README.md  __init__.py  main.py
apps/worker/src/chunking/: __init__.py  text.py
apps/worker/src/core/: __init__.py  config.py
apps/worker/src/db/: __init__.py  base.py  session.py  types.py
apps/worker/src/db/models/: __init__.py  manual.py  manual_chunk.py  manual_review_summary.py
apps/worker/src/jobs/: ingestion.py
apps/worker/src/parsers/: pdf.py
apps/worker/src/services/: __init__.py  embeddings.py  semantic_review.py  storage.py
apps/worker/src/utils/: __init__.py  logging.py
apps/worker/tests/: conftest.py  test_chunking.py  test_ingestion.py  test_logging.py  test_semantic_review.py
docs/: README.md
docs/architecture/: ARCHITECTURE.md  folder-structure.md  overview.md  technology-decisions.md
docs/audit/: CODE_AUDIT.md  DOC_VS_CODE.md
docs/backend/: README.md  api-modules.md  audit-module.md  settings-module.md
docs/decisions/: ADR-0001-monolithic-modular-architecture.md  README.md
docs/frontend/: README.md  workspace-layout.md
docs/operations/: deployment.md  local-development.md  testing.md  (+1 more)
infra/: README.md
scripts/: add_audit_log_table.sql  add_settings_table.sql  backup.sh  export-data.sh  import-data.sh
(+79 files in other folders)
