[project]
name = "rc7-programming-assistant-worker"
version = "0.1.0"
description = "Worker de ingesta documental para RC7 Programming Assistant"
requires-python = ">=3.12"
dependencies = [
  "pydantic-settings>=2.13.1,<3.0.0",
  "redis>=6.0.0,<7.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1,<9.0.0"
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
