[project]
name = "rc7-programming-assistant-worker"
version = "0.1.0"
description = "Worker de ingesta documental para RC7 Programming Assistant"
requires-python = ">=3.12"
dependencies = [
  "minio>=7.2.18,<8.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "pypdf>=5.5.0,<6.0.0",
  "pydantic-settings>=2.13.1,<3.0.0",
  "redis>=6.0.0,<7.0.0",
  "SQLAlchemy>=2.0.41,<3.0.0",
  "google-genai>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1,<9.0.0"
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
